//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table customers {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  phoneNumber String [unique, not null]
  emailAddress String [unique, not null]
  rewardsPoints Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orders orders [not null]
}

Table employees {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  phoneNumber String [unique, not null]
  emailAddress String [unique, not null]
  streetAddress String [not null]
  cityAddress String [not null]
  stateAddress String [not null]
  lastCheckInTime DateTime [not null]
  isCurrentlyOnShift Boolean [not null]
  isDeleted Boolean [not null, default: false]
  role Role [not null, default: 'CASHIER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orders orders [not null]
  tasks tasks [not null]
}

Table orders {
  id Int [pk, increment]
  customerId Int
  employeeId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  customer customers
  employee employees [not null]
  orderProducts orders_products [not null]
}

Table orders_products {
  id Int [pk, increment]
  orderId Int [not null]
  productId Int [not null]
  order orders [not null]
  product products [not null]
}

Table products {
  sku Int [pk, increment]
  itemName String [not null]
  category String [not null]
  price Decimal [not null]
  orderProduct orders_products [not null]
}

Table tasks {
  id Int [pk, increment]
  message String [not null]
  employeeId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  jobStatus JobStatus [not null, default: 'OPEN']
  employee employees [not null]
}

Enum Role {
  MANAGER
  SUPERVISOR
  CASHIER
}

Enum JobStatus {
  OPEN
  IN_PROGRESS
  AWAITING_REVIEW
  COMPLETED
}

Ref: orders.customerId > customers.id [delete: Cascade]

Ref: orders.employeeId > employees.id [delete: Cascade]

Ref: orders_products.orderId > orders.id [delete: Cascade]

Ref: orders_products.productId > products.sku [delete: Cascade]

Ref: tasks.employeeId > employees.id [delete: Cascade]